--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "gatsby": "^4.21.1",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-grid-layout": "^1.3.4"
   },
   "devDependencies": {
     "prettier": "^2.7.1"
